[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "async-embedded"
publish = false
version = "0.0.0-alpha.0"

[dependencies]
cortex-m = { version = "0.6.2", optional = true }
cortex-m-udf = { path = "../cortex-m-udf", optional = true }
generic-array = "0.13.2"
heapless = { git = "https://github.com/japaric/heapless", branch = "slab" }
pin-utils = "0.1.0-alpha.4"
riscv = { version = "0.5.6", optional = true }
typenum = "1.11.2"

[features]
default = ["riscv-wait-nop"]
isa-cortex-m = ["cortex-m", "cortex-m-udf"]
isa-riscv = ["riscv"]
riscv-wait-nop = []
riscv-wait-wfi-single-hart = []
wait-extern = []
