[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "async-embedded"
publish = false
version = "0.0.0-alpha.0"

[dependencies]
generic-array = "0.14.2"
heapless = { git = "https://github.com/japaric/heapless", branch = "slab" }
pin-utils = "0.1.0"
typenum = "1.12.0"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.2"
cortex-m-udf = { path = "../cortex-m-udf" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.5.6"

[features]
default = ["riscv-wait-nop"]
riscv-wait-nop = []
riscv-wait-wfi-single-hart = []
riscv-wait-extern = []
