[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "nrf52"
publish = false
version = "0.0.0-alpha.0"

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-semihosting = "0.3.5"
cortex-m-udf = { path = "../cortex-m-udf" }
heapless = "0.5.3"
panic-semihosting = "0.5.3"
panic-udf = { path = "../panic-udf" }

[dependencies]
async-cortex-m = { path = "../async-cortex-m", features = ["isa-cortex-m"] }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
pac = { package = "nrf52840-pac", version = "0.9.0", features = ["rt"] }

[dependencies.chrono]
default-features = false
version = "0.4.10"
